Scaffolded all app components

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:current
 
 RUN mkdir -p /api
-COPY . /api
+COPY package.json *yarn* /api/
 WORKDIR /api
-
 RUN yarn
+
+WORKDIR /
+
+COPY . /api
+
+WORKDIR /api
 
 CMD [ "yarn", "start" ]
