--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,9 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "parse": "^2.18.0",
