--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,12 +25,14 @@
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.3",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.3.2",
     "@nuxtjs/svg": "^0.1.12",
     "@nuxtjs/vuetify": "^1.11.2",
     "core-js": "^3.8.0",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.14.9",
-    "dotenv": "^8.2.0"
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
