--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
   "repository": "git+https://github.com/grey-software/hackathon-2020-codeforpak-civictech.git",
   "author": "ArsalaBangash <arsalabangash@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "gen-test-data": "ts-node scripts/generate-test-data.ts"
+  },
   "bugs": {
     "url": "https://github.com/grey-software/hackathon-2020-codeforpak-civictech/issues"
   },
   "homepage": "https://github.com/grey-software/hackathon-2020-codeforpak-civictech#readme",
   "devDependencies": {
-    "pm2": "^4.5.0"
+    "@types/node": "^14.14.12",
+    "pm2": "^4.5.0",
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
