--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,9 +6,12 @@
   "author": "Grey Khan",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts"
-    },
+    "dev": "ts-node index.ts",
+    "start": "node_modules/.bin/pm2 start index.ts --no-daemon",
+    "postinstall": "node_modules/.bin/pm2 install typescript"
+  },
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -16,7 +19,8 @@
     "express": "^4.17.1",
     "parse": "^2.18.0",
     "parse-dashboard": "^2.1.0",
-    "parse-server": "^4.4.0"
+    "parse-server": "^4.4.0",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
