--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,6 +11,7 @@
     "postinstall": "node_modules/.bin/pm2 install typescript"
   },
   "dependencies": {
+    "@kawarimidoll/vuepress-plugin-tailwind": "^1.0.1",
     "atob": "^2.1.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
