--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.8.0",
     "dotenv": "^8.2.0",
     "nuxt": "^2.14.9",
+    "nuxt-parse": "^0.1.3",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
