--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "@types/parse": "^2.18.1",
+    "@types/web-push": "^3.3.0",
     "pm2": "^4.5.0",
     "ts-node": "^9.1.0",
     "tslint": "^6.1.3",
